Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "greenville_population = greenvill"
+    "greenville_population = greenville['Popula']"
    ]
   },
   {
