Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,13 +87,14 @@
        "84554"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "greenville_population = greenville['Popula']"
+    "greenville_population = greenville['Population']\n",
+    "greenville_population"
    ]
   },
   {
