--- a/index.ipynb
+++ b/index.ipynb
@@ -121,7 +121,8 @@
     }
    ],
    "source": [
-    "greenville_area = greenville[]"
+    "greenville_area = greenville['Area']\n",
+    "greenville_area"
    ]
   },
   {
