Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -148,7 +148,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "city_keys = greenville"
+   ]
   },
   {
    "cell_type": "markdown",
