Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -134,22 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['Area', 'City', 'Country', 'Population'])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "city_keys = greenville"
+    "city_keys = greenville.keys()\n"
    ]
   },
   {
