--- a/index.ipynb
+++ b/index.ipynb
@@ -134,11 +134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Area', 'City', 'Country', 'Population'])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_keys = greenville.keys()\n"
+    "city_keys = greenville.keys()\n",
+    "city_keys"
    ]
   },
   {
