Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,7 +177,8 @@
     }
    ],
    "source": [
-    "city_values = greenville.va"
+    "city_values = greenville.values()\n",
+    "city_values"
    ]
   },
   {
