Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "dict_values([68, 'Greenville', 'USA', 84554])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "import \n"
    ]
   },
   {
