Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import \n"
+    "import pandel_as as pd\n",
+    "trav\n"
    ]
   },
   {
