Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,8 +222,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandel_as as pd\n",
-    "trav\n"
+    "import pandas as pd\n",
+    "travel_df = \n"
    ]
   },
   {
