--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "travel_df = \n"
+    "travel_df = pd.read_excell()\n"
    ]
   },
   {
