--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "travel_df = pd.read_excell('./cities.xlxs')\n"
+    "travel_df = pd.read_excell('./cities.xlsx')\n",
+    "cities = \n"
    ]
   },
   {
