Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    "source": [
     "import pandas as pd\n",
     "travel_df = pd.read_excell('./cities.xlsx')\n",
-    "cities = \n"
+    "cities = travel_df.to_\n"
    ]
   },
   {
