Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -327,13 +327,14 @@
        "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "salina = cities[]"
+    "salina = cities[-3]\n",
+    "salina"
    ]
   },
   {
