Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -360,7 +360,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "los_cabos = "
+   ]
   },
   {
    "cell_type": "markdown",
