--- a/index.ipynb
+++ b/index.ipynb
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -355,13 +355,14 @@
        "32237"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "los_cabos = cities[4]['Population']"
+    "los_cabos = cities[4]['Population']\n",
+    "los_cabos"
    ]
   },
   {
