Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -390,7 +390,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "city_count = "
+   ]
   },
   {
    "cell_type": "markdown",
