--- a/index.ipynb
+++ b/index.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -385,13 +385,14 @@
        "12"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_count = "
+    "city_count = len(cities)\n",
+    "city_count"
    ]
   },
   {
