--- a/index.ipynb
+++ b/index.ipynb
@@ -407,7 +407,9 @@
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cities"
+   ]
   },
   {
    "cell_type": "markdown",
