Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -408,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[4][]"
+    "cities[4]['City'] = Pyeongchang"
    ]
   },
   {
