Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -435,7 +435,8 @@
     }
    ],
    "source": [
-    "pyeongchang = list(cities[4](calues))"
+    "pyeongchang = list(cities[4](values))\n",
+    "p"
    ]
   },
   {
