--- a/index.ipynb
+++ b/index.ipynb
@@ -435,8 +435,8 @@
     }
    ],
    "source": [
-    "pyeongchang = list(cities[4](values))\n",
-    "p"
+    "pyeongchang_values = list(cities[4](values))\n",
+    "pyeongchang_va"
    ]
   },
   {
