Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -436,7 +436,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = list.cities[4].values)\n",
+    "pyeongchang_values = list(cities[4].values)\n",
     "pyeongchang_values"
    ]
   },
