Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -463,7 +463,8 @@
     }
    ],
    "source": [
-    "pyeongchang_keys = list(city[4])"
+    "pyeongchang_keys = list(city[4].keys())\n",
+    "pyeongchang_"
    ]
   },
   {
